--- a/Report/project.bib
+++ b/Report/project.bib
@@ -166,5 +166,75 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
+@inproceedings{Chaslot/MCTS,
+  author    = {Guillaume Chaslot and
+               Sander Bakkes and
+               Istvan Szita and
+               Pieter Spronck},
+  title     = {Monte-Carlo Tree Search: {A} New Framework for Game {AI}},
+  booktitle = {Proceedings of the Fourth Artificial Intelligence and Interactive
+               Digital Entertainment Conference, October 22-24, 2008, Stanford, California,
+               {USA}},
+  year      = {2008},
+  crossref  = {DBLP:conf/aiide/2008},
+  url       = {http://www.aaai.org/Library/AIIDE/2008/aiide08-036.php},
+  timestamp = {Wed, 12 Dec 2012 16:45:08 +0100},
+  biburl    = {https://dblp.org/rec/conf/aiide/ChaslotBSS08.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+
+@article{Silver/MCTS,
+  author    = {David Silver and
+               Aja Huang and
+               Chris J. Maddison and
+               Arthur Guez and
+               Laurent Sifre and
+               George van den Driessche and
+               Julian Schrittwieser and
+               Ioannis Antonoglou and
+               Vedavyas Panneershelvam and
+               Marc Lanctot and
+               Sander Dieleman and
+               Dominik Grewe and
+               John Nham and
+               Nal Kalchbrenner and
+               Ilya Sutskever and
+               Timothy P. Lillicrap and
+               Madeleine Leach and
+               Koray Kavukcuoglu and
+               Thore Graepel and
+               Demis Hassabis},
+  title     = {Mastering the game of Go with deep neural networks and tree search},
+  journal   = {Nature},
+  volume    = {529},
+  number    = {7587},
+  pages     = {484--489},
+  year      = {2016},
+  url       = {https://doi.org/10.1038/nature16961},
+  doi       = {10.1038/nature16961},
+  timestamp = {Wed, 14 Nov 2018 10:30:42 +0100},
+  biburl    = {https://dblp.org/rec/journals/nature/SilverHMGSDSAPL16.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@inproceedings{Kocsis/UCT,
+  author    = {Levente Kocsis and
+               Csaba Szepesv{\'{a}}ri},
+  title     = {Bandit Based Monte-Carlo Planning},
+  booktitle = {Machine Learning: {ECML} 2006, 17th European Conference on Machine
+               Learning, Berlin, Germany, September 18-22, 2006, Proceedings},
+  pages     = {282--293},
+  year      = {2006},
+  crossref  = {DBLP:conf/ecml/2006},
+  url       = {https://doi.org/10.1007/11871842\_29},
+  doi       = {10.1007/11871842\_29},
+  timestamp = {Tue, 14 May 2019 10:00:54 +0200},
+  biburl    = {https://dblp.org/rec/conf/ecml/KocsisS06.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
 
 
