--- a/Report/project.tex
+++ b/Report/project.tex
@@ -192,6 +192,39 @@ h(B,H) :-
 Training Data & Testing Data & Predicate & Metagol & Aleph \\ \hline
 \end{tabular}
 \end{center}
+
+\begin{tabular}{lrrrrrrrrrrrrrrrrrrr}
+\hline
+ predicate   &   alquerque &   asylum &   battle\_of\_numbers &   breakthrough &   buttons\_and\_lights &   duikoshi &   eight\_puzzle &   freeforall &   hexforthree &   horseshoe &   hunter &   knights\_tour &   kono &   pentago &   pilgrimage &   rainbow &   sudoku &   sukoshi &   untwisty\_corridor \\
+\hline
+ next        &          51 &       50 &                  54 &             50 &                   50 &         50 &             55 &           54 &            51 &          57 &       52 &             50 &     52 &        51 &           50 &        50 &       50 &        50 &                  62 \\
+ goal        &          50 &       50 &                  50 &             50 &                   50 &         50 &             50 &           50 &            50 &          50 &       50 &             50 &     50 &        50 &           50 &        50 &       50 &        50 &                  50 \\
+ legal       &          50 &       50 &                  50 &             50 &                   50 &         50 &             50 &           50 &            50 &          50 &       50 &             50 &     50 &        50 &           50 &        50 &       50 &        50 &                  50 \\
+ terminal    &         100 &      100 &                 100 &            100 &                  100 &        100 &            100 &          100 &           100 &         100 &      100 &            100 &    100 &        50 &          100 &       100 &       50 &       100 &                 100 \\
+\hline
+\end{tabular}
+\begin{tabular}{lrrrrrrrrrrrrrrrrrrr}
+\hline
+ predicate   &   alquerque &   asylum &   battle\_of\_numbers &   breakthrough &   buttons\_and\_lights &   duikoshi &   eight\_puzzle &   freeforall &   hexforthree &   horseshoe &   hunter &   knights\_tour &   kono &   pentago &   pilgrimage &   rainbow &   sudoku &   sukoshi &   untwisty\_corridor \\
+\hline
+ next        &          56 &       52 &                  68 &             51 &                  100 &         90 &             96 &           98 &            67 &          93 &       95 &             98 &     94 &        98 &           97 &        93 &       95 &        87 &                 100 \\
+ goal        &          95 &       99 &                  98 &             75 &                   75 &         83 &             99 &           98 &            99 &          97 &       98 &             99 &     98 &        83 &           98 &        75 &       75 &        75 &                  75 \\
+ legal       &          50 &       50 &                  76 &             50 &                   50 &         90 &             84 &           76 &            72 &          97 &       99 &             99 &     95 &        98 &           83 &        70 &       50 &        90 &                  50 \\
+ terminal    &         100 &      100 &                 100 &            100 &                  100 &        100 &            100 &          100 &           100 &         100 &      100 &            100 &    100 &       100 &          100 &       100 &      100 &       100 &                 100 \\
+\hline
+\end{tabular}
+\begin{tabular}{lrrrrrrrrrrrrrrrrrrr}
+\hline
+ predicate   &   alquerque &   asylum &   battle\_of\_numbers &   breakthrough &   buttons\_and\_lights &   duikoshi &   eight\_puzzle &   freeforall &   hexforthree &   horseshoe &   hunter &   knights\_tour &   kono &   pentago &   pilgrimage &   rainbow &   sudoku &   sukoshi &   untwisty\_corridor \\
+\hline
+ next        &          46 &       69 &                  54 &             56 &                  100 &         85 &             96 &           76 &            83 &          93 &       71 &             83 &     83 &        99 &           92 &        87 &       84 &      -100 &                 100 \\
+ goal        &          90 &       99 &                  97 &             50 &                   50 &         66 &             98 &           71 &           100 &          95 &       99 &             98 &     97 &        42 &           96 &        50 &       50 &        50 &                  50 \\
+ legal       &          99 &       83 &                  88 &            100 &                    0 &         60 &             75 &           85 &           100 &          96 &       83 &             95 &     98 &        83 &           89 &        27 &       10 &        81 &                   0 \\
+ terminal    &         100 &      100 &                 100 &             50 &                  100 &        100 &            100 &          100 &           100 &         100 &      100 &            100 &    100 &       100 &           96 &       100 &      100 &       100 &                -100 \\
+\hline
+\end{tabular}
+
+
 \section{Optimal Play vs Random with varying sample size}
 \bibliography{project}
 \bibliographystyle{plain}
