--- a/Report/project.tex
+++ b/Report/project.tex
@@ -6,12 +6,14 @@
 \usepackage{wrapfig}
 \usepackage{minted}
 \usepackage{mathrsfs}
+\usepackage{pgfplots}
 \usepackage[lined,boxruled]{algorithm2e}\usepackage{color}
 \usepackage[english]{babel}
 
 \newcommand{\ac}[1]{\textcolor{red}{AC: #1}}
 \newcommand{\af}[1]{\textcolor{blue}{AF: #1}}
 
+\pgfplotsset{width=10cm,compat=1.9} 
 \usemintedstyle{friendly}
 
 \begin{document}
@@ -280,7 +282,109 @@ specialised ilasp
 \hline
 \end{tabular}
 
+\subsection{Optimal res}
+\begin{tabular}{llrrr}
+\hline
+ game               & predicate   &   metagol &   aleph &   specialised\_ilasp \\
+\hline
+ alquerque          & next        &        51 &      90 &                  47 \\
+ alquerque          & goal        &        50 &      95 &                  90 \\
+ alquerque          & legal       &        50 &      50 &                  99 \\
+ alquerque          & terminal    &       100 &     100 &                 100 \\
+ asylum             & next        &        50 &      52 &                  49 \\
+ asylum             & goal        &        50 &      99 &                  99 \\
+ asylum             & legal       &        50 &      50 &                  99 \\
+ asylum             & terminal    &       100 &     100 &                 100 \\
+ battle\_of\_numbers  & next        &        53 &      65 &                  75 \\
+ battle\_of\_numbers  & goal        &        50 &      98 &                  97 \\
+ battle\_of\_numbers  & legal       &        50 &      76 &                  88 \\
+ battle\_of\_numbers  & terminal    &       100 &     100 &                 100 \\
+ breakthrough       & next        &        50 &      90 &                  90 \\
+ breakthrough       & goal        &        50 &      75 &                  50 \\
+ breakthrough       & legal       &        50 &      50 &                  87 \\
+ breakthrough       & terminal    &       100 &     100 &                  65 \\
+ buttons\_and\_lights & next        &        50 &     100 &                 100 \\
+ buttons\_and\_lights & goal        &        50 &      75 &                  50 \\
+ buttons\_and\_lights & legal       &        50 &      50 &                   0 \\
+ buttons\_and\_lights & terminal    &       100 &     100 &                 100 \\
+ duikoshi           & next        &        50 &      90 &                  87 \\
+ duikoshi           & goal        &        50 &      83 &                  66 \\
+ duikoshi           & legal       &        50 &      91 &                  69 \\
+ duikoshi           & terminal    &       100 &     100 &                 100 \\
+ eight\_puzzle       & next        &        55 &      96 &                  88 \\
+ eight\_puzzle       & goal        &        50 &      99 &                  50 \\
+ eight\_puzzle       & legal       &        50 &      84 &                  68 \\
+ eight\_puzzle       & terminal    &       100 &     100 &                 100 \\
+ freeforall         & next        &        55 &      98 &                  74 \\
+ freeforall         & goal        &        50 &      98 &                  71 \\
+ freeforall         & legal       &        50 &      76 &                  97 \\
+ freeforall         & terminal    &       100 &     100 &                 100 \\
+ hexforthree        & next        &        51 &      67 &                  83 \\
+ hexforthree        & goal        &        50 &      99 &                 100 \\
+ hexforthree        & legal       &        50 &      71 &                 100 \\
+ hexforthree        & terminal    &       100 &     100 &                 100 \\
+ horseshoe          & next        &        57 &      93 &                  93 \\
+ horseshoe          & goal        &        50 &      97 &                  95 \\
+ horseshoe          & legal       &        50 &      98 &                 100 \\
+ horseshoe          & terminal    &       100 &     100 &                 100 \\
+ hunter             & next        &        52 &      95 &                  74 \\
+ hunter             & goal        &        50 &      98 &                  99 \\
+ hunter             & legal       &        50 &      99 &                -100 \\
+ hunter             & terminal    &       100 &     100 &                 100 \\
+ knights\_tour       & next        &        50 &      93 &                  50 \\
+ knights\_tour       & goal        &        50 &      99 &                  99 \\
+ knights\_tour       & legal       &        50 &      99 &                  97 \\
+ knights\_tour       & terminal    &       100 &     100 &                 100 \\
+ kono               & next        &        52 &      94 &                  83 \\
+ kono               & goal        &        50 &      98 &                  97 \\
+ kono               & legal       &        50 &      99 &                  99 \\
+ kono               & terminal    &       100 &     100 &                 100 \\
+ pentago            & next        &        52 &      99 &                  99 \\
+ pentago            & goal        &        50 &      83 &                  64 \\
+ pentago            & legal       &        50 &      97 &                  91 \\
+ pentago            & terminal    &        50 &     100 &                 100 \\
+ pilgrimage         & next        &        50 &      97 &                  88 \\
+ pilgrimage         & goal        &        50 &      98 &                  96 \\
+ pilgrimage         & legal       &        50 &      84 &                  86 \\
+ pilgrimage         & terminal    &       100 &     100 &                 100 \\
+ rainbow            & next        &        50 &      93 &                  87 \\
+ rainbow            & goal        &        50 &      75 &                  50 \\
+ rainbow            & legal       &        50 &      70 &                  27 \\
+ rainbow            & terminal    &       100 &     100 &                 100 \\
+ sudoku             & next        &        50 &      95 &                  82 \\
+ sudoku             & goal        &        50 &      75 &                  50 \\
+ sudoku             & legal       &        50 &      95 &                  10 \\
+ sudoku             & terminal    &        50 &     100 &                  99 \\
+ sukoshi            & next        &        50 &      87 &                  75 \\
+ sukoshi            & goal        &        50 &      75 &                  50 \\
+ sukoshi            & legal       &        50 &      91 &                  83 \\
+ sukoshi            & terminal    &       100 &     100 &                 100 \\
+ untwisty\_corridor  & next        &        57 &     100 &                 100 \\
+ untwisty\_corridor  & goal        &        50 &      75 &                  50 \\
+ untwisty\_corridor  & legal       &        50 &      50 &                   0 \\
+ untwisty\_corridor  & terminal    &       100 &     100 &                 100 \\
+\hline
+\end{tabular}
 
+\begin{tikzpicture}
+\begin{axis}[
+	x tick label style={
+		/pgf/number format/1000 sep=},
+	ylabel=Year,
+	enlargelimits=0.05,
+	legend style={at={(0.5,-0.1)},
+	anchor=north,legend columns=-1},
+	ybar interval=0.7,
+]
+\addplot 
+	coordinates {(2012,408184) (2011,408348)
+		 (2010,414870) (2009,412156)};
+\addplot 
+	coordinates {(2012,388950) (2011,393007) 
+		(2010,398449) (2009,395972)};
+\legend{Men,Women}
+\end{axis}
+\end{tikzpicture}
 
 \section{Optimal Play vs Random with varying sample size}
 \bibliography{project}
